--- a/Baekjoon/Baekjoon.vcxproj
+++ b/Baekjoon/Baekjoon.vcxproj
@@ -24,6 +24,7 @@
     <ClCompile Include="4. 2628%29 종이자르기.cpp" />
     <ClCompile Include="3. 1244) 스위치 켜고 끄기.cpp" />
     <ClCompile Include="5. 2116) 주사위 쌓기.cpp" />
+    <ClCompile Include="6. 2605%29 줄세우기.cpp" />
   </ItemGroup>
   <PropertyGroup Label="Globals">
     <VCProjectVersion>16.0</VCProjectVersion>
