--- a/Baekjoon/Baekjoon.vcxproj.filters
+++ b/Baekjoon/Baekjoon.vcxproj.filters
@@ -18,22 +18,28 @@
     </Filter>
   </ItemGroup>
   <ItemGroup>
-    <ClCompile Include="1. 2669.cpp">
+    <ClCompile Include="2669.cpp">
       <Filter>소스 파일\IM대비 BOJ문제 모음</Filter>
     </ClCompile>
-    <ClCompile Include="2. 2635.cpp">
+    <ClCompile Include="2635.cpp">
       <Filter>소스 파일\IM대비 BOJ문제 모음</Filter>
     </ClCompile>
-    <ClCompile Include="3. 1244) 스위치 켜고 끄기.cpp">
+    <ClCompile Include="2244%29 스위치 켜고 끄기.cpp">
       <Filter>소스 파일\IM대비 BOJ문제 모음</Filter>
     </ClCompile>
-    <ClCompile Include="4. 2628%29 종이자르기.cpp">
+    <ClCompile Include="2628%29 종이자르기.cpp">
       <Filter>소스 파일\IM대비 BOJ문제 모음</Filter>
     </ClCompile>
-    <ClCompile Include="5. 2116) 주사위 쌓기.cpp">
+    <ClCompile Include="2116%29 주사위 쌓기.cpp">
       <Filter>소스 파일\IM대비 BOJ문제 모음</Filter>
     </ClCompile>
-    <ClCompile Include="6. 2605%29 줄세우기.cpp">
+    <ClCompile Include="2605%29 줄세우기.cpp">
+      <Filter>소스 파일\IM대비 BOJ문제 모음</Filter>
+    </ClCompile>
+    <ClCompile Include="예시.cpp">
+      <Filter>소스 파일</Filter>
+    </ClCompile>
+    <ClCompile Include="2559) 수열.cpp">
       <Filter>소스 파일\IM대비 BOJ문제 모음</Filter>
     </ClCompile>
   </ItemGroup>
