--- a/Baekjoon/Baekjoon.vcxproj
+++ b/Baekjoon/Baekjoon.vcxproj
@@ -20,6 +20,7 @@
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="2304) 창고 다각형.cpp" />
+    <ClCompile Include="10157%29 자리배정.cpp" />
     <ClCompile Include="2669.cpp" />
     <ClCompile Include="2635.cpp" />
     <ClCompile Include="2559) 수열.cpp" />
