--- a/Baekjoon/Baekjoon.vcxproj
+++ b/Baekjoon/Baekjoon.vcxproj
@@ -19,6 +19,7 @@
     </ProjectConfiguration>
   </ItemGroup>
   <ItemGroup>
+    <ClCompile Include="2564.경비원.cpp" />
     <ClCompile Include="2304) 창고 다각형.cpp" />
     <ClCompile Include="10157%29 자리배정.cpp" />
     <ClCompile Include="2669.cpp" />
