--- a/Baekjoon/Baekjoon.vcxproj
+++ b/Baekjoon/Baekjoon.vcxproj
@@ -20,6 +20,7 @@
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="14696. 딱지놀이.cpp" />
+    <ClCompile Include="2563.색종이.cpp" />
     <ClCompile Include="2564.경비원.cpp" />
     <ClCompile Include="2304) 창고 다각형.cpp" />
     <ClCompile Include="10157%29 자리배정.cpp" />
