--- a/Baekjoon/Baekjoon.vcxproj
+++ b/Baekjoon/Baekjoon.vcxproj
@@ -21,6 +21,8 @@
   <ItemGroup>
     <ClCompile Include="10163. 색종이.cpp" />
     <ClCompile Include="14696. 딱지놀이.cpp" />
+    <ClCompile Include="2477. 참외밭.cpp" />
+    <ClCompile Include="2491. 수열.cpp" />
     <ClCompile Include="2578. 빙고.cpp" />
     <ClCompile Include="2563.색종이.cpp" />
     <ClCompile Include="2564.경비원.cpp" />
