--- a/Baekjoon/Baekjoon.vcxproj
+++ b/Baekjoon/Baekjoon.vcxproj
@@ -24,6 +24,7 @@
     <ClCompile Include="14696. 딱지놀이.cpp" />
     <ClCompile Include="2477. 참외밭.cpp" />
     <ClCompile Include="2491. 수열.cpp" />
+    <ClCompile Include="2565. 전깃줄.cpp" />
     <ClCompile Include="2578. 빙고.cpp" />
     <ClCompile Include="2563.색종이.cpp" />
     <ClCompile Include="2564.경비원.cpp" />
@@ -37,6 +38,7 @@
     <ClCompile Include="2116%29 주사위 쌓기.cpp" />
     <ClCompile Include="2605%29 줄세우기.cpp" />
     <ClCompile Include="10158. 개미.cpp" />
+    <ClCompile Include="9625.BABBA.cpp" />
     <ClCompile Include="방배정.cpp" />
     <ClCompile Include="예시.cpp" />
     <ClCompile Include="직사각형.cpp" />
