--- a/Baekjoon/Baekjoon.vcxproj.filters
+++ b/Baekjoon/Baekjoon.vcxproj.filters
@@ -90,5 +90,8 @@
     <ClCompile Include="9625.BABBA.cpp">
       <Filter>소스 파일\내가만든 문제집</Filter>
     </ClCompile>
+    <ClCompile Include="9007 카누.cpp">
+      <Filter>소스 파일\내가만든 문제집</Filter>
+    </ClCompile>
   </ItemGroup>
 </Project>
