--- a/Baekjoon/Baekjoon.vcxproj
+++ b/Baekjoon/Baekjoon.vcxproj
@@ -21,6 +21,7 @@
   <ItemGroup>
     <ClCompile Include="10163. 색종이.cpp" />
     <ClCompile Include="11055.cpp" />
+    <ClCompile Include="2749%29 파보나치 수3.cpp" />
     <ClCompile Include="14696. 딱지놀이.cpp" />
     <ClCompile Include="2477. 참외밭.cpp" />
     <ClCompile Include="2491. 수열.cpp" />
