--- a/Baekjoon/Baekjoon.vcxproj
+++ b/Baekjoon/Baekjoon.vcxproj
@@ -23,7 +23,11 @@
     <ClCompile Include="1085) 직사각형에서 탈출.cpp" />
     <ClCompile Include="11055.cpp" />
     <ClCompile Include="11720) 숫자의 합.cpp" />
+    <ClCompile Include="1259) 팰린드롬수.cpp" />
     <ClCompile Include="1546) 퍙군.cpp" />
+    <ClCompile Include="15829)Hashing.cpp" />
+    <ClCompile Include="2231) 분해합.cpp" />
+    <ClCompile Include="2292)벌집.cpp" />
     <ClCompile Include="2749%29 파보나치 수3.cpp" />
     <ClCompile Include="14696. 딱지놀이.cpp" />
     <ClCompile Include="2477. 참외밭.cpp" />
@@ -42,9 +46,13 @@
     <ClCompile Include="2116%29 주사위 쌓기.cpp" />
     <ClCompile Include="2605%29 줄세우기.cpp" />
     <ClCompile Include="10158. 개미.cpp" />
+    <ClCompile Include="2775) 부녀회장이 될테야.cpp" />
+    <ClCompile Include="2798) 블랙잭.cpp" />
+    <ClCompile Include="2869) 달팽이는 올라가고 싶다.cpp" />
     <ClCompile Include="3052)나머지.cpp" />
     <ClCompile Include="9007 카누.cpp" />
     <ClCompile Include="9625.BABBA.cpp" />
+    <ClCompile Include="ACM 호텔.cpp" />
     <ClCompile Include="구구단.cpp" />
     <ClCompile Include="단어의 개수.cpp" />
     <ClCompile Include="방배정.cpp" />
@@ -54,6 +62,7 @@
     <ClCompile Include="1106%29 파일 합치기.cpp" />
     <ClCompile Include="시험성적.cpp" />
     <ClCompile Include="예시.cpp" />
+    <ClCompile Include="직각삼각형.cpp" />
     <ClCompile Include="직사각형.cpp" />
   </ItemGroup>
   <PropertyGroup Label="Globals">
