--- a/Baekjoon/Baekjoon.vcxproj
+++ b/Baekjoon/Baekjoon.vcxproj
@@ -35,7 +35,13 @@
     <ClCompile Include="1259) 팰린드롬수.cpp" />
     <ClCompile Include="1546) 퍙군.cpp" />
     <ClCompile Include="15829)Hashing.cpp" />
+    <ClCompile Include="1654) 랜선 자르기.cpp" />
+    <ClCompile Include="18111) 제출.cpp" />
+    <ClCompile Include="1874) 스택 수열.cpp" />
+    <ClCompile Include="1929) 소수 구하기.cpp" />
+    <ClCompile Include="1966) 프린터 큐.cpp" />
     <ClCompile Include="1978%29 소수찾기.cpp" />
+    <ClCompile Include="2108) 통계햑.cpp" />
     <ClCompile Include="2164) 카드2.cpp" />
     <ClCompile Include="2231) 분해합.cpp" />
     <ClCompile Include="2292)벌집.cpp" />
@@ -60,6 +66,7 @@
     <ClCompile Include="10158. 개미.cpp" />
     <ClCompile Include="2775) 부녀회장이 될테야.cpp" />
     <ClCompile Include="2798) 블랙잭.cpp" />
+    <ClCompile Include="2805) 나무 자르기.cpp" />
     <ClCompile Include="2869) 달팽이는 올라가고 싶다.cpp" />
     <ClCompile Include="3052)나머지.cpp" />
     <ClCompile Include="4949) 균형잡힌 세상.cpp" />
