--- a/Baekjoon/Baekjoon.vcxproj.filters
+++ b/Baekjoon/Baekjoon.vcxproj.filters
@@ -219,5 +219,26 @@
     <ClCompile Include="11866) 오세푸스 문제 0.cpp">
       <Filter>소스 파일\클래스 문제\레벨 2</Filter>
     </ClCompile>
+    <ClCompile Include="1654) 랜선 자르기.cpp">
+      <Filter>소스 파일\클래스 문제\레벨 2</Filter>
+    </ClCompile>
+    <ClCompile Include="1874) 스택 수열.cpp">
+      <Filter>소스 파일\클래스 문제\레벨 2</Filter>
+    </ClCompile>
+    <ClCompile Include="1929) 소수 구하기.cpp">
+      <Filter>소스 파일\클래스 문제\레벨 2</Filter>
+    </ClCompile>
+    <ClCompile Include="1966) 프린터 큐.cpp">
+      <Filter>소스 파일\클래스 문제\레벨 2</Filter>
+    </ClCompile>
+    <ClCompile Include="2108) 통계햑.cpp">
+      <Filter>소스 파일</Filter>
+    </ClCompile>
+    <ClCompile Include="2805) 나무 자르기.cpp">
+      <Filter>소스 파일</Filter>
+    </ClCompile>
+    <ClCompile Include="18111) 제출.cpp">
+      <Filter>소스 파일</Filter>
+    </ClCompile>
   </ItemGroup>
 </Project>
