--- a/Baekjoon/Baekjoon.vcxproj
+++ b/Baekjoon/Baekjoon.vcxproj
@@ -36,7 +36,7 @@
     <ClCompile Include="1546) 퍙군.cpp" />
     <ClCompile Include="15829)Hashing.cpp" />
     <ClCompile Include="1654) 랜선 자르기.cpp" />
-    <ClCompile Include="18111) 제출.cpp" />
+    <ClCompile Include="18111%29 마인크래프트.cpp" />
     <ClCompile Include="1874) 스택 수열.cpp" />
     <ClCompile Include="1929) 소수 구하기.cpp" />
     <ClCompile Include="1966) 프린터 큐.cpp" />
