--- a/Baekjoon/Baekjoon.vcxproj
+++ b/Baekjoon/Baekjoon.vcxproj
@@ -35,18 +35,23 @@
     <ClCompile Include="11720) 숫자의 합.cpp" />
     <ClCompile Include="11723) 집합.cpp" />
     <ClCompile Include="11726) 2xn 타일링.cpp" />
+    <ClCompile Include="11727) 2xn 타일링 2.cpp" />
     <ClCompile Include="1181) 단어 정렬.cpp" />
     <ClCompile Include="11866) 오세푸스 문제 0.cpp" />
     <ClCompile Include="1259) 팰린드롬수.cpp" />
+    <ClCompile Include="1260) DFS와 BFS.cpp" />
     <ClCompile Include="1463%29 1로 만둘기.cpp" />
+    <ClCompile Include="1541) 잃어버린 괄호.cpp" />
     <ClCompile Include="1546) 퍙군.cpp" />
     <ClCompile Include="15829)Hashing.cpp" />
     <ClCompile Include="1654) 랜선 자르기.cpp" />
     <ClCompile Include="17219) 비밀번호 찾기.cpp" />
     <ClCompile Include="17626%29 Four Squares.cpp" />
     <ClCompile Include="1764) 듣보잡.cpp" />
+    <ClCompile Include="1780) 종이의 개수.cpp" />
     <ClCompile Include="18111%29 마인크래프트.cpp" />
     <ClCompile Include="1874) 스택 수열.cpp" />
+    <ClCompile Include="1927) 최소 힙.cpp" />
     <ClCompile Include="1929) 소수 구하기.cpp" />
     <ClCompile Include="1966) 프린터 큐.cpp" />
     <ClCompile Include="1978%29 소수찾기.cpp" />
