--- a/Baekjoon/Baekjoon.vcxproj
+++ b/Baekjoon/Baekjoon.vcxproj
@@ -29,11 +29,13 @@
     <ClCompile Include="11047) 동전 0.cpp" />
     <ClCompile Include="11050) 이항계수1.cpp" />
     <ClCompile Include="11055.cpp" />
+    <ClCompile Include="11279) 최대 힙.cpp" />
     <ClCompile Include="11399) ATM.cpp" />
     <ClCompile Include="11650) 좌표 정렬하기.cpp" />
     <ClCompile Include="11651) 좌표 정렬하기2.cpp" />
     <ClCompile Include="11720) 숫자의 합.cpp" />
     <ClCompile Include="11723) 집합.cpp" />
+    <ClCompile Include="11724) 연결 요소의 개수.cpp" />
     <ClCompile Include="11726) 2xn 타일링.cpp" />
     <ClCompile Include="11727) 2xn 타일링 2.cpp" />
     <ClCompile Include="1181) 단어 정렬.cpp" />
@@ -62,6 +64,7 @@
     <ClCompile Include="2579) 계단 오르기.cpp" />
     <ClCompile Include="2606) 바이러스.cpp" />
     <ClCompile Include="2609) 최대공약수와 최소공배수.cpp" />
+    <ClCompile Include="2630) 색종이 만들기.cpp" />
     <ClCompile Include="2749%29 파보나치 수3.cpp" />
     <ClCompile Include="14696. 딱지놀이.cpp" />
     <ClCompile Include="2477. 참외밭.cpp" />
