--- a/Baekjoon/Baekjoon.vcxproj
+++ b/Baekjoon/Baekjoon.vcxproj
@@ -22,6 +22,7 @@
     <ClCompile Include="1003) 파보나치 함수.cpp" />
     <ClCompile Include="10163. 색종이.cpp" />
     <ClCompile Include="1018) 체스판 다시 색칠하기.cpp" />
+    <ClCompile Include="1074) 압축.cpp" />
     <ClCompile Include="10814) 나이순 정렬.cpp" />
     <ClCompile Include="10816) 숫자카드 2.cpp" />
     <ClCompile Include="1085) 직사각형에서 탈출.cpp" />
@@ -53,12 +54,14 @@
     <ClCompile Include="1780) 종이의 개수.cpp" />
     <ClCompile Include="18111%29 마인크래프트.cpp" />
     <ClCompile Include="1874) 스택 수열.cpp" />
+    <ClCompile Include="18870) 좌표 압축.cpp" />
     <ClCompile Include="1927) 최소 힙.cpp" />
     <ClCompile Include="1929) 소수 구하기.cpp" />
     <ClCompile Include="1966) 프린터 큐.cpp" />
     <ClCompile Include="1978%29 소수찾기.cpp" />
     <ClCompile Include="2108) 통계햑.cpp" />
     <ClCompile Include="2164) 카드2.cpp" />
+    <ClCompile Include="2178) 미로 탐색.cpp" />
     <ClCompile Include="2231) 분해합.cpp" />
     <ClCompile Include="2292)벌집.cpp" />
     <ClCompile Include="2579) 계단 오르기.cpp" />
@@ -89,6 +92,7 @@
     <ClCompile Include="2869) 달팽이는 올라가고 싶다.cpp" />
     <ClCompile Include="3052)나머지.cpp" />
     <ClCompile Include="4949) 균형잡힌 세상.cpp" />
+    <ClCompile Include="5525)IOIOI.cpp" />
     <ClCompile Include="7568) 덩치.cpp" />
     <ClCompile Include="9007 카누.cpp" />
     <ClCompile Include="9095) 1,2,3 더하기.cpp" />
