--- a/Baekjoon/Baekjoon.vcxproj.filters
+++ b/Baekjoon/Baekjoon.vcxproj.filters
@@ -342,5 +342,8 @@
     <ClCompile Include="16928) 뱀과 사다리 게임.cpp">
       <Filter>소스 파일\클래스 문제\레벨 3</Filter>
     </ClCompile>
+    <ClCompile Include="11382%29 a+b+c.cpp">
+      <Filter>소스 파일\클래스 문제\레벨 1</Filter>
+    </ClCompile>
   </ItemGroup>
 </Project>
