--- a/Baekjoon/Baekjoon.vcxproj
+++ b/Baekjoon/Baekjoon.vcxproj
@@ -22,6 +22,7 @@
     <ClCompile Include="1003) 파보나치 함수.cpp" />
     <ClCompile Include="10163. 색종이.cpp" />
     <ClCompile Include="1018) 체스판 다시 색칠하기.cpp" />
+    <ClCompile Include="10718) We love kriii.cpp" />
     <ClCompile Include="1074) 압축.cpp" />
     <ClCompile Include="10814) 나이순 정렬.cpp" />
     <ClCompile Include="10816) 숫자카드 2.cpp" />
