--- a/Baekjoon/Baekjoon.vcxproj.filters
+++ b/Baekjoon/Baekjoon.vcxproj.filters
@@ -345,5 +345,8 @@
     <ClCompile Include="11382%29 a+b+c.cpp">
       <Filter>소스 파일\클래스 문제\레벨 1</Filter>
     </ClCompile>
+    <ClCompile Include="10718) We love kriii.cpp">
+      <Filter>소스 파일\단기간 성장</Filter>
+    </ClCompile>
   </ItemGroup>
 </Project>
