--- a/Baekjoon/Baekjoon.vcxproj
+++ b/Baekjoon/Baekjoon.vcxproj
@@ -28,6 +28,7 @@
     <ClCompile Include="10816) 숫자카드 2.cpp" />
     <ClCompile Include="1085) 직사각형에서 탈출.cpp" />
     <ClCompile Include="10866) 덱.cpp" />
+    <ClCompile Include="10926).cpp" />
     <ClCompile Include="11047) 동전 0.cpp" />
     <ClCompile Include="11050) 이항계수1.cpp" />
     <ClCompile Include="11055.cpp" />
