--- a/Baekjoon/Baekjoon.vcxproj.filters
+++ b/Baekjoon/Baekjoon.vcxproj.filters
@@ -348,5 +348,8 @@
     <ClCompile Include="10718) We love kriii.cpp">
       <Filter>소스 파일\단기간 성장</Filter>
     </ClCompile>
+    <ClCompile Include="10926).cpp">
+      <Filter>소스 파일\단기간 성장</Filter>
+    </ClCompile>
   </ItemGroup>
 </Project>
