--- a/Baekjoon/Baekjoon.vcxproj.filters
+++ b/Baekjoon/Baekjoon.vcxproj.filters
@@ -351,5 +351,8 @@
     <ClCompile Include="10926).cpp">
       <Filter>소스 파일\단기간 성장</Filter>
     </ClCompile>
+    <ClCompile Include="10757%29 큰수 A+B.cpp">
+      <Filter>소스 파일\단기간 성장</Filter>
+    </ClCompile>
   </ItemGroup>
 </Project>
