--- a/Baekjoon/Baekjoon.vcxproj
+++ b/Baekjoon/Baekjoon.vcxproj
@@ -48,6 +48,7 @@
     <ClCompile Include="1259) 팰린드롬수.cpp" />
     <ClCompile Include="1260) DFS와 BFS.cpp" />
     <ClCompile Include="1463%29 1로 만둘기.cpp" />
+    <ClCompile Include="14681) 사분면 고르기.cpp" />
     <ClCompile Include="1541) 잃어버린 괄호.cpp" />
     <ClCompile Include="1546) 퍙군.cpp" />
     <ClCompile Include="15829)Hashing.cpp" />
