--- a/Baekjoon/Baekjoon.vcxproj.filters
+++ b/Baekjoon/Baekjoon.vcxproj.filters
@@ -354,5 +354,8 @@
     <ClCompile Include="10757%29 큰수 A+B.cpp">
       <Filter>소스 파일\단기간 성장</Filter>
     </ClCompile>
+    <ClCompile Include="14681) 사분면 고르기.cpp">
+      <Filter>소스 파일\단기간 성장</Filter>
+    </ClCompile>
   </ItemGroup>
 </Project>
