--- a/Baekjoon/Baekjoon.vcxproj
+++ b/Baekjoon/Baekjoon.vcxproj
@@ -28,6 +28,7 @@
     <ClCompile Include="10816) 숫자카드 2.cpp" />
     <ClCompile Include="1085) 직사각형에서 탈출.cpp" />
     <ClCompile Include="10866) 덱.cpp" />
+    <ClCompile Include="10872) 팩토리얼.cpp" />
     <ClCompile Include="10926).cpp" />
     <ClCompile Include="11047) 동전 0.cpp" />
     <ClCompile Include="11050) 이항계수1.cpp" />
@@ -51,6 +52,7 @@
     <ClCompile Include="14681) 사분면 고르기.cpp" />
     <ClCompile Include="1541) 잃어버린 괄호.cpp" />
     <ClCompile Include="1546) 퍙군.cpp" />
+    <ClCompile Include="15552) 빠른 A+B.cpp" />
     <ClCompile Include="15829)Hashing.cpp" />
     <ClCompile Include="11382%29 a+b+c.cpp" />
     <ClCompile Include="1654) 랜선 자르기.cpp" />
@@ -73,6 +75,7 @@
     <ClCompile Include="2178) 미로 탐색.cpp" />
     <ClCompile Include="2231) 분해합.cpp" />
     <ClCompile Include="2292)벌집.cpp" />
+    <ClCompile Include="2420) 사파리월드.cpp" />
     <ClCompile Include="2579) 계단 오르기.cpp" />
     <ClCompile Include="2606) 바이러스.cpp" />
     <ClCompile Include="2609) 최대공약수와 최소공배수.cpp" />
