--- a/Baekjoon/Baekjoon.vcxproj.filters
+++ b/Baekjoon/Baekjoon.vcxproj.filters
@@ -357,5 +357,14 @@
     <ClCompile Include="14681) 사분면 고르기.cpp">
       <Filter>소스 파일\단기간 성장</Filter>
     </ClCompile>
+    <ClCompile Include="2420) 사파리월드.cpp">
+      <Filter>소스 파일</Filter>
+    </ClCompile>
+    <ClCompile Include="10872) 팩토리얼.cpp">
+      <Filter>소스 파일</Filter>
+    </ClCompile>
+    <ClCompile Include="15552) 빠른 A+B.cpp">
+      <Filter>소스 파일</Filter>
+    </ClCompile>
   </ItemGroup>
 </Project>
