--- a/Baekjoon/Baekjoon.vcxproj
+++ b/Baekjoon/Baekjoon.vcxproj
@@ -22,6 +22,7 @@
     <ClCompile Include="1003) 파보나치 함수.cpp" />
     <ClCompile Include="10163. 색종이.cpp" />
     <ClCompile Include="1018) 체스판 다시 색칠하기.cpp" />
+    <ClCompile Include="1032) 명령 프롬프트.cpp" />
     <ClCompile Include="10718) We love kriii.cpp" />
     <ClCompile Include="1074) 압축.cpp" />
     <ClCompile Include="10814) 나이순 정렬.cpp" />
@@ -36,6 +37,7 @@
     <ClCompile Include="11279) 최대 힙.cpp" />
     <ClCompile Include="11286)  절댓값 합.cpp" />
     <ClCompile Include="11399) ATM.cpp" />
+    <ClCompile Include="1141)접두사.cpp" />
     <ClCompile Include="11650) 좌표 정렬하기.cpp" />
     <ClCompile Include="11651) 좌표 정렬하기2.cpp" />
     <ClCompile Include="11720) 숫자의 합.cpp" />
