--- a/Baekjoon/Baekjoon.vcxproj
+++ b/Baekjoon/Baekjoon.vcxproj
@@ -70,6 +70,7 @@
     <ClCompile Include="1929) 소수 구하기.cpp" />
     <ClCompile Include="1931) 회의실 배정.cpp" />
     <ClCompile Include="1966) 프린터 큐.cpp" />
+    <ClCompile Include="1977) 완전제곱수.cpp" />
     <ClCompile Include="1978%29 소수찾기.cpp" />
     <ClCompile Include="1992) 쿼드 트리.cpp" />
     <ClCompile Include="2108) 통계햑.cpp" />
