--- a/Baekjoon/Baekjoon.vcxproj.filters
+++ b/Baekjoon/Baekjoon.vcxproj.filters
@@ -378,5 +378,8 @@
     <ClCompile Include="2480) 세개의 주사위.cpp">
       <Filter>소스 파일\단기간 성장</Filter>
     </ClCompile>
+    <ClCompile Include="1977) 완전제곱수.cpp">
+      <Filter>소스 파일</Filter>
+    </ClCompile>
   </ItemGroup>
 </Project>
